--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,7 @@ nav{
         border: 1px solid rgba(13, 19, 33, 0.2);
         border-radius: 16px;
         margin-top: 60px;
+        margin-bottom: 150px;
 }
 .inspreation-video{
         width: 1076px;
@@ -134,4 +135,67 @@ nav{
         display: flex;
         justify-content: center;
         margin-top: 29px;
+}
+.terget{
+        text-align: center;
+        margin-bottom: 48px;
+}
+.terget-section{
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        margin-bottom: 115px;
+
+}
+.target-1{
+        border-radius: 16px;
+        background: rgba(255, 76, 30, 0.05);
+}
+.target-2{
+        border-radius: 16px;
+        background: rgba(0, 76, 232, 0.05);
+}
+.target-3{
+        border-radius: 16px;
+        background: rgba(255, 223, 0, 0.05);
+}
+.target-box{
+        width: 350px;
+        height: 270px;
+        padding: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-top: 60px;
+        gap: 24px;
+}
+.target-title{
+        color: rgb(13, 19, 33);
+        font-family: Azeret Mono;
+        font-size: 24px;
+        font-weight: 800;
+        line-height: 36px;
+        letter-spacing: 0%;
+        text-align: left;
+}
+.target-description{
+        opacity: 0.7;
+        color: rgb(13, 19, 33);
+        font-family: Azeret Mono;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: 0%;
+        text-align: left;
+}
+.learn-more{
+        color: rgb(13, 19, 33);
+        font-family: Azeret Mono;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 19px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-decoration-line: underline;
 }
