--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,7 @@ nav{
         border-radius: 8px;
 }
 .hero-style{
-        background-image:url("/assets/Hero-bg.png");
+        background-image:url("../assets/Hero-bg.png");
         align-items: center;
         width: 100%;
         height: 70vh;
