--- a/style/style.css
+++ b/style/style.css
@@ -222,6 +222,7 @@ nav{
         line-height: 36px;
         letter-spacing: 0%;
         text-align: left;
+        margin-bottom: 8px;
 }
 .target-content-description{
         opacity: 0.7;
@@ -230,5 +231,74 @@ nav{
         font-weight: 400;
         line-height: 26px;
         letter-spacing: 0%;
+        margin-bottom: 24px;
         text-align: left;
+}
+
+.sugestion {
+        background-image: url(../assets/handshake.jpg);
+        border-radius: 16px;
+        background: rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2), url(Email);
+        width: 1060px;
+        height: 290px;
+        padding: 64px 48px;
+        margin: 0 auto;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 52px;
+        
+}
+
+.sugestion-title{
+        color: rgb(255, 255, 255);
+        font-size: 32px;
+        font-weight: 700;
+        line-height: 36px;
+        letter-spacing: 0%;
+        margin-bottom: 16px;
+}
+.sugestion-description{
+        opacity: 0.7;
+        color: #FFFFFF;
+        font-size: 16px;
+        font-weight: 200;
+        line-height: 26px;
+        letter-spacing: 0%;
+        margin-bottom: 24px;
+}
+.input-box{
+        padding: 16px 215px 16px 20px;
+        box-sizing: border-box;
+        border: 1px solid rgba(13, 19, 33, 0.15);
+        border-radius: 8px;
+        background: rgb(255, 255, 255);
+        background-color: white;
+        font-weight: 400;
+        font-size: 16px;
+        }
+
+.submit{
+        padding: 16px 20px;
+        border-radius: 8px;
+        border: none;
+        background-color: white;
+        font-weight: 400;
+        font-size: 20px;
+}
+.footer-content{
+        padding-top: 32px;
+        padding-bottom: 32px;
+        width: 100%;
+        height: 100px;
+        left: 0;
+        top: 5145px;
+        border-radius: 16px;
+        background: rgba(13, 19, 33, 0.03);
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: 80px;
+        margin-bottom: -15px;
 }
